fix datagrid overflow styling issue

--- a/Oak.Client/wwwroot/css/global.scss
+++ b/Oak.Client/wwwroot/css/global.scss
@@ -29,6 +29,10 @@ $sub_divs: '', '.25', '.5', '.75';
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 html, body, .fill {
     width: 100%;
     height: 100%;
@@ -37,6 +41,7 @@ html, body, .fill {
     overflow: auto;
     font-family: 'Open Sans', sans-serif;
 }
+
 .root{
     @include genVars(a, rem);
     @include genVars(r, em);
@@ -251,4 +256,8 @@ div.header > ul.rz-profile-menu > li.rz-navigation-item > div.rz-navigation-item
 }
 .rz-grid-table thead th .rz-column-title{
     font-weight: 600;
+}
+
+.rz-data-grid{
+    max-width: 100%;
 }
